--- a/index.html
+++ b/index.html
@@ -141,19 +141,19 @@
             answer: "天"
         },
         {
-            question: "小明早上穿好衣服，准备去____。",
+            question: "小明早上穿好衣服，准备去学____。",
             options: ["书", "校", "歌"],
             answer: "校"
         },
         {
             question: "我们一起手____手，在草地上玩游戏。",
-            options: ["走", "花", "跟"],
-            answer: "跟"
+            options: ["走", "花", "牵"],
+            answer: "牵"
         },
         {
             question: "我____得好，老师给我一个五角星。",
-            options: ["习", "得", "来"],
-            answer: "得"
+            options: ["这", "画", "来"],
+            answer: "画"
         },
         {
             question: "春天来了，五颜六色的____开了。",
