--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'LiHei Pro', sans-serif;
-            background-color: #ffe0b2; /* 浅橙色背景 */
+            background-color: #ffe0b2;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,7 +17,7 @@
         }
 
         .quiz-container {
-            background-color: #ff9800; /* 橙色背景 */
+            background-color: #ff9800;
             padding: 30px 40px;
             border-radius: 15px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
@@ -34,6 +34,220 @@
         }
 
         .question {
+            margin-bottom: 25px;
+            font-size: 22px;
+            line-height: 1.6;
+            font-weight: bold;
+        }
+
+        .options label {
+            display: block;
+            background-color: #fff3e0;
+            padding: 12px 15px;
+            margin-bottom: 10px;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            font-size: 18px;
+            font-weight: normal;
+            border: 1px solid #ffcc80;
+        }
+
+        .options label:hover { background-color: #ffecb3; }
+
+        .options input[type="radio"] {
+            margin-right: 10px;
+            transform: scale(1.2);
+        }
+
+        .submit-btn {
+            display: block;
+            width: 100%;
+            padding: 15px;
+            background-color: #e65100;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 20px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.1s;
+            margin-top: 20px;
+        }
+
+        .submit-btn:hover { background-color: #ff7043; }
+        .submit-btn:active { transform: scale(0.99); }
+
+        .feedback {
+            margin-top: 20px;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .correct { color: green; }
+        .incorrect { color: red; }
+        .hidden { display: none; }
+
+        .progress-bar {
+            height: 10px;
+            background-color: #fbe9e7;
+            border-radius: 5px;
+            margin-bottom: 15px;
+        }
+
+        .progress {
+            height: 100%;
+            width: 0%;
+            background-color: #e65100;
+            border-radius: 5px;
+            transition: width 0.5s;
+        }
+    </style>
+</head>
+<body>
+
+<div class="quiz-container">
+    <h1>一年级生字填充练习</h1>
+    <div class="progress-bar"><div class="progress" id="progress"></div></div>
+
+    <!-- 第一页 -->
+    <div id="name-page">
+        <div class="question">请输入你的名字：</div>
+        <input id="student-name" type="text" style="width:100%; padding:10px; font-size:18px; border-radius:8px; border:1px solid #ddd;">
+        <button class="submit-btn" id="start-button">开始练习</button>
+    </div>
+
+    <!-- 题目页 -->
+    <form id="quiz-form" class="hidden"></form>
+
+    <div class="feedback" id="feedback"></div>
+    <button class="submit-btn hidden" id="submit-button">提交答案</button>
+    <button class="submit-btn hidden" id="next-button">下一题</button>
+</div>
+
+<script>
+    const quizData = [
+        { question: "今天是晴天，____上挂着一个大大的太阳。", options: ["地", "天", "口"], answer: "天" },
+        { question: "小明早上穿好衣服，准备去学____。", options: ["书", "校", "歌"], answer: "校" },
+        { question: "我们一起手____手，在草地上玩游戏。", options: ["走", "花", "牵"], answer: "牵" },
+        { question: "我____得好，老师给我一个五角星。", options: ["这", "画", "来"], answer: "画" },
+        { question: "春天来了，五颜六色的____开了。", options: ["花", "草", "枝"], answer: "花" },
+        { question: "小____在树枝上唱歌。", options: ["鸟", "朋", "姐"], answer: "鸟" },
+        { question: "晚上，我可以看到很多____星。", options: ["全", "字", "星"], answer: "星" },
+        { question: "我要认真____字，把字写得漂亮。", options: ["做", "写", "跑"], answer: "写" },
+        { question: "我们是好____友，天天一起玩。", options: ["妈", "朋", "爸"], answer: "朋" },
+        { question: "爸爸____着对我说：“你真棒！”", options: ["笑", "要", "全"], answer: "笑" }
+    ];
+
+    let currentQuestionIndex = 0;
+    let studentName = "";
+    let correctCount = 0;
+
+    const namePage = document.getElementById("name-page");
+    const startButton = document.getElementById("start-button");
+    const nameInput = document.getElementById("student-name");
+
+    const form = document.getElementById('quiz-form');
+    const submitButton = document.getElementById('submit-button');
+    const nextButton = document.getElementById('next-button');
+    const feedback = document.getElementById('feedback');
+    const progressBar = document.getElementById('progress');
+
+    startButton.addEventListener("click", () => {
+        studentName = nameInput.value.trim();
+        if (studentName === "") {
+            alert("请输入名字！");
+            return;
+        }
+        namePage.classList.add("hidden");
+        form.classList.remove("hidden");
+        loadQuestion();
+    });
+
+    function loadQuestion() {
+        const q = quizData[currentQuestionIndex];
+
+        form.innerHTML = `
+            <div class="question">
+                ${currentQuestionIndex + 1}. ${q.question.replace('____', '（<span style="color:#e65100;">&nbsp;&nbsp;&nbsp;&nbsp;</span>）')}
+            </div>
+            <div class="options">
+                ${q.options.map(option => `
+                    <label><input type="radio" name="answer" value="${option}"> ${option}</label>
+                `).join('')}
+            </div>
+        `;
+
+        feedback.classList.add("hidden");
+
+        submitButton.classList.remove("hidden");
+
+        if (currentQuestionIndex === quizData.length - 1) {
+            nextButton.textContent = "完成";
+        } else {
+            nextButton.textContent = "下一题";
+        }
+
+        nextButton.classList.add("hidden");
+
+        updateProgress();
+    }
+
+    function updateProgress() {
+        const percentage = (currentQuestionIndex / quizData.length) * 100;
+        progressBar.style.width = percentage + '%';
+    }
+
+    function checkAnswer(event) {
+        event.preventDefault();
+        const selected = form.querySelector('input[name="answer"]:checked');
+        if (!selected) {
+            feedback.innerHTML = "请选择一个答案！";
+            feedback.classList.remove("hidden");
+            feedback.classList.remove("correct", "incorrect");
+            return;
+        }
+
+        const userAnswer = selected.value;
+        const correct = quizData[currentQuestionIndex].answer;
+
+        if (userAnswer === correct) {
+            correctCount++;
+            feedback.innerHTML = `✅ 恭喜你，答对了！正确答案是：${correct}`;
+            feedback.classList.add("correct");
+        } else {
+            feedback.innerHTML = `❌ 答错了。正确答案是：<span style="color:green;">${correct}</span>`;
+            feedback.classList.add("incorrect");
+        }
+
+        feedback.classList.remove("hidden");
+        submitButton.classList.add("hidden");
+        nextButton.classList.remove("hidden");
+    }
+
+    function nextQuestion() {
+        currentQuestionIndex++;
+
+        if (currentQuestionIndex === quizData.length) {
+
+            /* ⭐⭐ 修正点：进入恭喜页面前清除答题提示 ⭐⭐ */
+            feedback.classList.add("hidden");
+
+            form.innerHTML = `<p style="text-align:center;">🎉 恭喜 <strong>${studentName}</strong> ，你答对了 <span style="color:green;">${correctCount}</span> 题，继续加油！</p>`;
+            nextButton.classList.add("hidden");
+            return;
+        }
+
+        loadQuestion();
+    }
+
+    submitButton.addEventListener('click', checkAnswer);
+    nextButton.addEventListener('click', nextQuestion);
+
+</script>
+
+</body>
+</html>
             margin-bottom: 25px;
             font-size: 22px;
             line-height: 1.6;
