Implement score submission to Google Sheets
Added functionality to send quiz scores to Google Apps Script.

--- a/index.html
+++ b/index.html
@@ -110,14 +110,12 @@
     <h1>一年级生字填充练习</h1>
     <div class="progress-bar"><div class="progress" id="progress"></div></div>
 
-    <!-- 第一页 -->
     <div id="name-page">
         <div class="question">请输入你的名字：</div>
         <input id="student-name" type="text" style="width:100%; padding:10px; font-size:18px; border-radius:8px; border:1px solid #ddd;">
         <button class="submit-btn" id="start-button">开始练习</button>
     </div>
 
-    <!-- 题目页 -->
     <form id="quiz-form" class="hidden"></form>
 
     <div class="feedback" id="feedback"></div>
@@ -211,6 +209,9 @@
         const userAnswer = selected.value;
         const correct = quizData[currentQuestionIndex].answer;
 
+        // 移除旧的反馈颜色类
+        feedback.classList.remove("correct", "incorrect");
+
         if (userAnswer === correct) {
             correctCount++;
             feedback.innerHTML = `✅ 恭喜你，答对了！正确答案是：${correct}`;
@@ -225,15 +226,47 @@
         nextButton.classList.remove("hidden");
     }
 
+    // ⭐ 新增函数：发送分数到 Google Apps Script
+    function sendScoreToGoogleSheet(name, score) {
+        // 您提供的 Web 应用网址
+        const webAppUrl = "https://script.google.com/macros/s/AKfycbyTgPKaxBh96oCuArf-2K8q_pV8njuNOtArPjvJ_IGQ9ppnAzwrFYTc04w1XBQ1V3uSaw/exec";
+        
+        const data = {
+            name: name,
+            score: score
+        };
+
+        fetch(webAppUrl, {
+            method: 'POST',
+            mode: 'no-cors', // 必须使用 'no-cors'，因为是跨域请求
+            cache: 'no-cache',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(data)
+        })
+        .then(() => {
+            console.log("成绩发送尝试完成。");
+        })
+        .catch(error => {
+            console.error('发送成绩时发生错误:', error);
+        });
+    }
+
     function nextQuestion() {
         currentQuestionIndex++;
 
         if (currentQuestionIndex === quizData.length) {
+            
+            // ⭐ 调用新的函数，发送名字和分数
+            sendScoreToGoogleSheet(studentName, correctCount);
 
-            /* ⭐⭐ 修正点：进入恭喜页面前清除答题提示 ⭐⭐ */
+            /* 修正点：进入恭喜页面前清除答题提示 */
             feedback.classList.add("hidden");
 
-            form.innerHTML = `<p style="text-align:center;">🎉 恭喜 <strong>${studentName}</strong> ，你答对了 <span style="color:green;">${correctCount}</span> 题，继续加油！</p>`;
+            form.innerHTML = `<p style="text-align:center;">🎉 恭喜 <strong>${studentName}</strong> ，你答对了 <span style="color:green;">${correctCount}</span> 题，继续加油！</p>
+                <p style="text-align:center; font-size:16px; color:#555;">（成绩已提交到老师的记录中）</p>
+            `;
             nextButton.classList.add("hidden");
             return;
         }
